apps/kube/chuckrpg/manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: chuckrpg
    labels:
        app.kubernetes.io/part-of: chuckrpg
