apps/kube/chuckrpg/manifest/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: chuckrpg-routes
    namespace: chuckrpg
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - chuckrpg.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: chuckrpg-service
                port: 4322
